--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^4.4.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.7.0",
     "react-dom": "^17.0.2",
     "react-floating-whatsapp": "^5.0.8",
     "react-helmet": "^6.1.0",
@@ -21,6 +22,7 @@
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.4",
     "react-slick": "^0.28.1",
+    "react-time-picker": "^6.6.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
     "web-vitals": "^1.1.2"
